--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.keju.park"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	package="com.keju.park" android:versionCode="1" android:versionName="1.0">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
+	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
+	<!-- 这个权限用于进行网络定位 -->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<!-- 这个权限用于访问GPS定位 -->
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<!-- 用于访问wifi网络信息,wifi信息会用于进行网络定位 -->
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	<!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<!-- 这个权限用于获取wifi的获取权限,wifi信息会用来进行网络定位 -->
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+	<!-- 用于读取手机当前的状态 -->
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+	<!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<!-- 访问网络，网络定位需要上网 -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<!-- SD卡读取权限，用户写入离线定位数据 -->
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+	<!-- 允许应用读取低级别的系统日志文件 -->
+	<uses-permission android:name="android.permission.READ_LOGS"/>
+	
+	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name" android:name=".CommonApplication"
+		android:theme="@android:style/Theme.Light.NoTitleBar">
+		<activity android:name="com.keju.park.ui.activity.MainActivity"
+			android:theme="@style/Theme.splash" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:name=".CommonApplication"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
-        <activity
-            android:name="com.keju.park.ui.activity.MainActivity"
-            android:theme="@style/Theme.splash"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<!-- 定位服务 -->
+		<service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote">
+		</service>
+		<!-- 百度定位的key -->
+		<meta-data android:name="com.baidu.lbsapi.API_KEY" android:value="ZOatwHcx3iSNWy4VfQ0NhwxT"/> 
+	</application>
 
 </manifest>
