--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,8 +33,8 @@
 	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" android:name=".CommonApplication"
 		android:theme="@android:style/Theme.Light.NoTitleBar">
-		<activity android:name="com.keju.park.ui.activity.VoiceLookCarport"
-			android:theme="@style/Theme.splash" android:label="@string/app_name">
+		<activity android:name="com.keju.park.ui.activity.LookParkingActivity"
+			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
