--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
 	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" android:name=".CommonApplication"
 		android:theme="@android:style/Theme.Light.NoTitleBar">
-		<activity android:name="com.keju.park.ui.activity.LookParkingActivity"
+		<activity android:name="com.keju.park.ui.activity.lookparking.LookParkingActivity"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -45,6 +45,11 @@
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
 
 		<activity android:name="com.keju.park.ui.activity.MainActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+		<!--找車位 -->
+		<activity android:name="com.keju.park.ui.activity.lookparking.VoiceSearchActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+		<activity android:name="com.keju.park.ui.activity.lookparking.HistorySearchParking"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
 
 		<!-- 定位服务 -->
