--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,8 +33,9 @@
 	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" android:name=".CommonApplication"
 		android:theme="@android:style/Theme.Light.NoTitleBar">
-		<activity android:name="com.keju.park.ui.activity.lookparking.LookParkingActivity"
-			android:label="@string/app_name">
+		<activity android:name=".ui.activity.MainActivity"
+			android:label="@string/app_name"
+			android:windowSoftInputMode="stateHidden|adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
@@ -44,12 +45,9 @@
 		<activity android:name=".ui.activity.ShowRouteActivity"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
 
-		<activity android:name="com.keju.park.ui.activity.MainActivity"
+		<activity android:name=".ui.activity.LookParkingActivity"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
-		<!--找車位 -->
-		<activity android:name="com.keju.park.ui.activity.lookparking.VoiceSearchActivity"
-			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
-		<activity android:name="com.keju.park.ui.activity.lookparking.HistorySearchParking"
+		<activity android:name=".ui.activity.VoiceLookCarport"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
 
 		<!-- 定位服务 -->
@@ -58,7 +56,7 @@
 		</service>
 		<!-- 百度定位的key -->
 		<meta-data android:name="com.baidu.lbsapi.API_KEY"
-			android:value="ycd8wNnV09whbIyoGGGgDrp8" />
+			android:value="ZOatwHcx3iSNWy4VfQ0NhwxT" />
 	</application>
 
 </manifest>
