--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
 	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
 		android:label="@string/app_name" android:name=".CommonApplication"
 		android:theme="@android:style/Theme.Light.NoTitleBar">
-		<activity android:name=".ui.activity.MainActivity"
+		<activity android:name="com.keju.park.ui.MainActivity"
 			android:label="@string/app_name"
 			android:windowSoftInputMode="stateHidden|adjustPan">
 			<intent-filter>
@@ -42,13 +42,11 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<activity android:name=".ui.activity.ShowRouteActivity"
-			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
-
-		<activity android:name=".ui.activity.LookParkingActivity"
-			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
-		<activity android:name=".ui.activity.lookparking.VoiceSearchActivity"
-			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
+		<!-- 找车位 -->
+		<activity android:name="com.keju.park.ui.searchparking.VoiceSearchActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
+		<activity android:name="com.keju.park.ui.searchparking.SearchParkingActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
+		<activity android:name="com.keju.park.ui.searchparking.HistorySearchParking" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
+		<activity android:name="com.keju.park.ui.activity.ShowRouteActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
 
 		<!-- 定位服务 -->
 		<service android:name="com.baidu.location.f" android:enabled="true"
