--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,8 +34,7 @@
 		android:label="@string/app_name" android:name=".CommonApplication"
 		android:theme="@android:style/Theme.Light.NoTitleBar">
 		<activity android:name="com.keju.park.ui.MainActivity"
-			android:label="@string/app_name"
-			android:windowSoftInputMode="stateHidden|adjustPan">
+			android:label="@string/app_name" android:windowSoftInputMode="stateHidden|adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
@@ -43,18 +42,21 @@
 			</intent-filter>
 		</activity>
 		<!-- 找车位 -->
-		<activity android:name="com.keju.park.ui.searchparking.VoiceSearchActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
-		<activity android:name="com.keju.park.ui.searchparking.SearchParkingActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
-		<activity android:name="com.keju.park.ui.searchparking.HistorySearchParking" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
-		<activity android:name="com.keju.park.ui.activity.ShowRouteActivity" android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"/>
-
+		<activity android:name="com.keju.park.ui.searchparking.VoiceSearchActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
+		<activity android:name="com.keju.park.ui.searchparking.SearchParkingActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
+		<activity android:name="com.keju.park.ui.searchparking.HistorySearchParking"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
+		<activity android:name="com.keju.park.ui.searchparking.ParkingListActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
 		<!-- 定位服务 -->
 		<service android:name="com.baidu.location.f" android:enabled="true"
 			android:process=":remote">
 		</service>
 		<!-- 百度定位的key -->
 		<meta-data android:name="com.baidu.lbsapi.API_KEY"
-			android:value="ZOatwHcx3iSNWy4VfQ0NhwxT" />
+			android:value="ycd8wNnV09whbIyoGGGgDrp8" />
 	</application>
 
 </manifest>
