--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
 		android:label="@string/app_name" android:name=".CommonApplication"
 		android:theme="@android:style/Theme.Light.NoTitleBar">
 		
-		<activity android:name="com.keju.park.ui.searchparking.SearchParkingActivity"
+		<activity android:name="com.keju.park.ui.LogoActivity" android:theme="@style/Theme.splash"
 			android:label="@string/app_name" android:windowSoftInputMode="stateHidden|adjustPan">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -43,6 +43,9 @@
 			</intent-filter>
 		</activity>  
 		
+		<activity android:name="com.keju.park.ui.searchparking.SearchParkingActivity"
+		    android:windowSoftInputMode="stateHidden|adjustPan"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
 		<activity android:name="com.keju.park.ui.searchparking.VoiceSearchActivity"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden" />
 		
@@ -63,7 +66,7 @@
 		</service>
 		<!-- 百度定位的key -->
 		<meta-data android:name="com.baidu.lbsapi.API_KEY"
-			android:value="ycd8wNnV09whbIyoGGGgDrp8" />
+			android:value="ZOatwHcx3iSNWy4VfQ0NhwxT" />
 	</application>
 	<!-- ycd8wNnV09whbIyoGGGgDrp8 周勇 -->
 	<!--9VIVbq1eLaebspsk79zRWgrk -->
