--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,8 @@
 		<activity android:name="com.keju.park.ui.searchparking.VoiceDialogueActivity"
 			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"></activity>
 		
+		<activity android:name="com.keju.park.ui.more.MoreActivity"
+			android:screenOrientation="portrait" android:configChanges="orientation|keyboardHidden"
 		<!-- 定位服务 -->
 		<service android:name="com.baidu.location.f" android:enabled="true"
 			android:process=":remote">
