--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -121,23 +121,29 @@
             android:screenOrientation="portrait" >
         </activity>
 
-        <!-- 定位服务 -->
-        <service
-            android:name="com.baidu.location.f"
-            android:enabled="true"
-            android:process=":remote" >
-        </service>
         <!-- 百度定位的key -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="E3I6SxmOdPW9nEbpbYy8bd9B" />
+            android:value="9VIVbq1eLaebspsk79zRWgrk" />
+        <!-- 友盟提供的服务 -->
+        <service
+            android:name="com.umeng.common.net.DownloadingService"
+            android:process=":DownloadingService" >
+        </service>
+
+        <activity
+            android:name="com.umeng.update.UpdateDialogActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>
         <!-- 友盟APP KEY -->
-        <!-- <meta-data
-            android:name="UMENG_APPKEY"
-            android:value="YOUR APP KEY" />
         <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5377122856240b8865054d1c" />
+        <!--
+            <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="Channel ID" /> -->
+            android:value="Channel ID" />
+        -->
     </application>
     <!-- E3I6SxmOdPW9nEbpbYy8bd9B 周勇 -->
     <!-- 9VIVbq1eLaebspsk79zRWgrk -->
